--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ header > img {
     width: 200px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 20px;
 }
 
 img {
@@ -53,7 +54,9 @@ nav {
 nav ul {
     list-style: none;
     /* text-align: center; */
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: space-evenly;
+    padding: 0;
     display: flex;
 }
 
@@ -61,6 +64,17 @@ nav li {
     display: inline-block;
     align-self: center;
     /* padding: 0 5%; */
+}
+
+a {
+    padding: 15px;
+    text-decoration: none;
+    color: #332B2A;
+    font-size: 1rem;
+}
+
+li:hover a {
+    color: #F2C994;
 }
 
 section {
@@ -99,6 +113,14 @@ article img {
 
 @media (min-width: 870px) {
 
+    header > img {
+        /* display: block;
+        width: 200px;
+        margin-left: auto;
+        margin-right: auto; */
+        padding-bottom: 50px;
+    }
+    
     section.info-section {
         /* display: flex; */
         flex-direction: row;
