--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 }
 
 nav, section.promo-section, section.info-section article {
-    border: 1px solid #332B2A;
+    border: 3px solid #332B2A;
 }
 
 body {
@@ -28,7 +28,7 @@ body {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 h2 {
@@ -43,10 +43,6 @@ header > img {
     padding-bottom: 20px;
 }
 
-img {
-    width: 200px;
-}
-
 nav {
     background-color: #BE5446;
 }
@@ -58,19 +54,24 @@ nav ul {
     justify-content: space-evenly;
     padding: 0;
     display: flex;
+    height: 100%;
+    margin: 0;
 }
 
 nav li {
     display: inline-block;
     align-self: center;
-    /* padding: 0 5%; */
+    height: 100%;
+    padding: 1rem;
 }
 
 a {
-    padding: 15px;
+    /* padding: 15px; */
     text-decoration: none;
     color: #332B2A;
+    /* padding: 3rem; */
     font-size: 1rem;
+    font-weight: bold;
 }
 
 li:hover a {
@@ -96,7 +97,15 @@ section.info-section {
 
 article {
     flex: 1;
-    margin: 20px;
+    /* padding: 20px; */
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+section.info-section article {
+    /* flex: 1; */
+    /* margin: 20px; */
+    max-width: calc(100% - 6px);
 }
 
 article h2 {
@@ -106,25 +115,10 @@ article h2 {
 }
 
 article img {
+    width: 200px;
     height: 200px;
     overflow: hidden;
     object-fit: cover;
-}
-
-@media (min-width: 870px) {
-
-    header > img {
-        /* display: block;
-        width: 200px;
-        margin-left: auto;
-        margin-right: auto; */
-        padding-bottom: 50px;
-    }
-    
-    section.info-section {
-        /* display: flex; */
-        flex-direction: row;
-    }
 }
 
 footer {
@@ -160,7 +154,7 @@ button:hover {
 
 h1.promo-heading {
     margin-top: 0;
-    padding-top: 5%;
+    padding-top: 3%;
     padding-bottom: 15%;
 }
 
@@ -175,6 +169,7 @@ section:hover h1.promo-heading ~ div {
 
 h1.promo-heading ~ div p {
     color: #efdac8;
+    font-size: 1rem;
     /* color: #163f3b; */
     /* color: #1C6363; */
 }
@@ -187,4 +182,53 @@ div.promo-content {
 
 div.promo-content p {
     padding: 20px;
+}
+
+@media (min-width: 870px) {
+
+    header > img {
+        /* display: block;
+        width: 200px;
+        margin-left: auto;
+        margin-right: auto; */
+        padding-bottom: 50px;
+    }
+    
+    a {
+        /* padding: 15px; */
+        /* text-decoration: none; */
+        /* color: #332B2A; */
+        /* padding: 3rem; */
+        font-size: 1.5rem;
+        /* font-weight: bold; */
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+    
+    h2 {
+        font-size: 2rem;
+    }
+    
+    section.info-section {
+        /* display: flex; */
+        flex-direction: row;
+    }
+
+    section.info-section article {
+        /* flex: 1; */
+        margin: 20px;
+    }
+
+    h1.promo-heading ~ div p {
+        color: #efdac8;
+        font-size: 1.4rem;
+        /* color: #163f3b; */
+        /* color: #1C6363; */
+    }
+
+    button {
+        font-size: .75rem;
+    }
 }
