--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,20 @@
-/*  - background white: #edefee
-    - yellow: #f1ab52
-    - pale yellow: #F2C994, F2DFC7
-    - darker orange: #c44b3d
-    - lighter orange: #c8594a
-    - tan: #efdac8 
-    - header brown: #632A1C
-    - dark brown: #453938
-    - black: #332B2A */
-
-* {
-    /* border: 1px solid #332B2A; */
-}
+/*  Color Scheme:
+        - background white: #edefee
+        - yellow: #f1ab52
+        - pale yellow: #F2C994, F2DFC7
+        - darker orange: #c44b3d
+        - lighter orange: #c8594a
+        - tan: #efdac8 
+        - header brown: #632A1C
+        - dark brown: #453938
+        - black: #332B2A 
+*/
 
 nav, section.promo-section, section.info-section article {
     border: 3px solid #332B2A;
 }
 
 body {
-    /* background-color: #edefee; */
-    /* background-color: #f1ab52; */
     background-color: #F2C994;
     font-family: 'Markazi Text', serif;
     margin-top: 3rem;
@@ -28,12 +24,10 @@ body {
 }
 
 h1 {
-    /* font-size: 2.5rem; */
     font-size: calc(3vw + 3vh);
 }
 
 h2 {
-    /* font-size: 2rem; */
     font-size: calc(2.5vw + 2.5vh);
     background-color: #c8594a;
     padding: 5% 15px;
@@ -54,8 +48,6 @@ nav {
 
 nav ul {
     list-style: none;
-    /* text-align: center; */
-    /* justify-content: space-around; */
     justify-content: space-evenly;
     padding: 0;
     display: flex;
@@ -71,10 +63,8 @@ nav li {
 }
 
 a {
-    /* padding: 15px; */
     text-decoration: none;
     color: #332B2A;
-    /* padding: 3rem; */
     font-size: 1rem;
     font-weight: bold;
 }
@@ -96,33 +86,21 @@ section.promo-section {
 }
 
 section.info-section {
-    /* display: flex; */
     flex-direction: column;
 }
 
 article {
     flex: 1;
-    /* padding: 20px; */
     width: 100%;
     margin-bottom: 40px;
 }
 
 section.info-section article {
-    /* flex: 1; */
-    /* margin: 20px; */
     max-width: calc(100% - 6px);
 }
 
-/* article h2 { */
-    /* overflow: hidden; */
-    /* object-fit: cover; */
-    /* font-size: calc(3vw + 3vh); */
-    /* font-size: 3rem; */
-/* } */
-
 article img {
     width: calc(100%);
-    /* height: calc(100%); */
     aspect-ratio: 1 / 1;
     overflow: hidden;
     object-fit: cover;
@@ -142,7 +120,6 @@ footer {
 footer div {
     display: flex;
     flex: 1;
-    /* align-self: center; */
     justify-content: center;
 }
 
@@ -156,7 +133,6 @@ button {
     padding: 10px;
     margin: 0 20px 30px 20px;
     border-radius: 5px;
-    /* box-shadow: none; */
     border: 1px solid #c44b3d;
 }
 
@@ -173,7 +149,6 @@ h1.promo-heading {
 
 h1.promo-heading ~ div {
     opacity: 0;
-    /* position: translate(125%, 0); */
     transform: translate(125%, 0);
 }
 
@@ -192,10 +167,6 @@ h1.promo-heading ~ div {
 section:hover h1.promo-heading ~ div {
     /* use an animaiton here */
     opacity: 100;
-    /* animation: banner-slide-in 2s ease 0.5 1 normal; */
-
-    /* transform: translate(0, 0);
-    transition: 2s; */
 
     animation: banner-slide-in 2s ease;
     animation-fill-mode: forwards;
@@ -209,38 +180,25 @@ h1.promo-heading ~ div p {
 div.promo-content {
     background-color: #332B2A;
     background-color: rgb(51, 43, 42, .75);
-    /* margin-top: 5%; */
 }
 
 div.promo-content p {
-    /* padding: 20px; */
     padding: 30px 20px 20px;
 }
 
 @media (min-width: 870px) {
 
     header > img {
-        /* display: block;
-        width: 200px;
-        margin-left: auto;
-        margin-right: auto; */
         padding-bottom: 50px;
     }
     
     a {
-        /* padding: 15px; */
-        /* text-decoration: none; */
-        /* color: #332B2A; */
-        /* padding: 3rem; */
         font-size: 1.5rem;
-        /* font-weight: bold; */
     }
 
     h1.promo-heading ~ div p {
         color: #efdac8;
         font-size: 1.4rem;
-        /* color: #163f3b; */
-        /* color: #1C6363; */
     }
 
     button {
@@ -252,34 +210,23 @@ div.promo-content p {
     }
     
     h2 {
-        /* height: 75px; */
-        /* font-size: 2rem; */
         font-size: calc(1.5vw + 1.5vh);
         align-items: center;
-        /* padding: 0 15px; */
         padding: 7% 15px;
         margin: 0;
     }
     
     section.info-section {
-        /* display: flex; */
         flex-direction: row;
     }
 
     section.info-section article {
-        /* flex: 1; */
         margin: 20px;
     }
 
     article img {
         width: calc(100%);
         aspect-ratio: 1 / 1;
-        /* width: 200px;
-        height: 200px; */
-        /* overflow: hidden;
-        object-fit: cover; */
-        /* border-top: 3px solid #332B2A;
-        border-bottom: 3px solid #332B2A; */
     }
 
     article p {
